--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -19,10 +19,10 @@
 <body class="row">
     <header class="row justify-content-center" style="padding-left: -250px;">
         <div class="col-6 text-center d-flex align-items-center">
-            <a target="black" href="https://www.usmp.edu.pe/"><img class="container" src="imagenes/usmp.png" style="width: 95%;"></a>
+            <a target="blank" href="https://www.usmp.edu.pe/"><img class="container" src="imagenes/usmp.png" style="width: 95%;"></a>
         </div>
         <div class="col-6 text-center d-flex align-items-center">
-            <h1 class="container text-light" style="font-family: cursive; font-size: 200%;">TALLER DE PROYECTOS 2023-I</h1>
+            <h1 class="container" style="font-family: arial; font-size: 200%; color: black">TALLER DE PROYECTOS 2023-I</h1>
         </div>
     </header>
 </body>
